apps/termix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: termix
  namespace: termix
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: termix
  template:
    metadata:
      labels:
        app: termix
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: termix
          image: ghcr.io/jvz-devx/termixkit:main@sha256:4a3357560a5cdb14e8dc258f3d857693e4d7ad216bc4e8294757871d30bfadea # {"$imagepolicy": "flux-system:termixkit"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: app-data
              mountPath: /var/lib/termixkit
          securityContext:
            allowPrivilegeEscalation: false
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: termixkit-app-data
