apps/termix/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: termix
  namespace: termix
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.111
  selector:
    app: termix
  ports:
    - name: http
      port: 80
      targetPort: http
